# uc01-permission-anomaly

./: .gitignore  README.md  init_uc.sh  pyproject.toml  script.md
docs/: DEVELOPER_PLAYBOOK.md  avepoint-interview  avepoint_fabric_rest_api_deployment.md  avepoint_ml_use_cases.json  (+3 more)
uc01-permission-anomaly/: .env.template  main.py  pyproject.toml
uc01-permission-anomaly/mlruns/165206525998237274/: meta.yaml
uc01-permission-anomaly/mlruns/165206525998237274/446b1c6a8c9d49a5bd088e34e0c86fa7/artifacts/model/: metrics_report.md
uc01-permission-anomaly/mlruns/165206525998237274/446b1c6a8c9d49a5bd088e34e0c86fa7/metrics/: mean_anomaly_score  precision_at_100  precision_at_500  recall_at_threshold
uc01-permission-anomaly/mlruns/165206525998237274/446b1c6a8c9d49a5bd088e34e0c86fa7/tags/: mlflow.source.git.commit
uc01-permission-anomaly/mlruns/165206525998237274/bd7db5b17d444809b8fe9d9a853f9a76/: meta.yaml
uc01-permission-anomaly/mlruns/165206525998237274/bd7db5b17d444809b8fe9d9a853f9a76/metrics/: auc_roc  mean_anomaly_score  precision_at_500  threshold
uc01-permission-anomaly/mlruns/165206525998237274/bd7db5b17d444809b8fe9d9a853f9a76/tags/: mlflow.runName
uc01-permission-anomaly/mlruns/165206525998237274/tags/: outcome  owner
uc01-permission-anomaly/models/ensemble_20251211_154317_run_bd7db5b1/: autoencoder.pkl
uc01-permission-anomaly/notebooks/: 00_generate_synthetic_data.py  01_ingest_permissions.py  04_model_training.py  05_batch_scoring.py
uc01-permission-anomaly/scripts/: deploy_to_fabric.py  duckdb_shell.py
uc01-permission-anomaly/src/: evaluation.py
(+102 files in other folders)
