[project]
name = "uc01-permission-anomaly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=38.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyod>=2.0.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
]
