[project]
name = "avepoint-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.3",
    "faker>=38.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyod>=2.0.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "azure-identity>=1.15.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
